# Arch_Logs

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  Makefile.gui  PKGBUILD  README.md  SECURITY.md  archlog-gui.desktop  build.sh  setup-github.sh
src/: arch_features.h  arch_log_manager.h  enhanced_security.h  error_handler.h  hardware_monitor.h  log_analyzer.h  main.cpp  modern_gui.cpp  quick_actions.h  security.h  structured_logger.h  system_compat.h
